testdata/baselines/reference/submodule/conformance/esDecorators-classDeclaration-exportModifier.errors.txt
global.js(1,12): error TS8010: Type annotations can only be used in TypeScript files.


==== global.js (1 errors) ====
    /** @type {*} */
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var dec;
    
==== file1.js (0 errors) ====
    // ok
    @dec export class C1 { }
    
==== file2.js (0 errors) ====
    // ok
    @dec export default class C2 {}
    
==== file3.js (0 errors) ====
    // error
    export @dec default class C3 {}
    
==== file4.js (0 errors) ====
    // ok
    export @dec class C4 {}
    
==== file5.js (0 errors) ====
    // ok
    export default @dec class C5 {}
    
==== file6.js (0 errors) ====
    // error
    @dec export @dec class C6 {}
    
==== file7.js (0 errors) ====
    // error
    @dec export default @dec class C7 {}
    